// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateContactForm should render channel 1`] = `
<body>
  <div>
    <div
      class="dialog dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Update contact
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <div
            class="color-neutral-cloudy"
          >
            When a contact arrives at this point in your flow...
          </div>
          <div>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select bold_placeholder"
                data-passed-props="[object Object]"
                data-testid="temba_select_type"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal has-icon-left"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      iconleft="search-1"
                      placeholder="Update the contact"
                      size="0"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <span
                      class="icon-left unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cloudy"
                      data-v-2d3b8b50=""
                      data-v-a1936218=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M34.0615 35.0005C33.8116 35.0005 33.5754 34.903 33.3992 34.7256L25.2575 26.5826C24.3065 27.3961 23.2355 28.0597 22.067 28.5559C20.5312 29.2082 18.9178 29.5394 17.272 29.5394C15.7011 29.5394 14.1578 29.2382 12.6819 28.6421C9.64389 27.4161 7.26574 25.0817 5.98481 22.0662C4.70388 19.052 4.67263 15.7178 5.89858 12.6811C7.12452 9.64433 9.45894 7.26492 12.4732 5.98399C14.009 5.33041 15.6211 5.00049 17.2682 5.00049C18.8391 5.00049 20.3825 5.30291 21.8583 5.89776C24.8963 7.12371 27.2745 9.45812 28.5554 12.4736C29.8363 15.4891 29.8676 18.822 28.6416 21.8588C28.1393 23.1035 27.4469 24.2444 26.5809 25.2554L34.7251 33.4009C35.09 33.7658 35.09 34.3606 34.7251 34.7268C34.5477 34.903 34.3115 35.0005 34.0615 35.0005ZM17.2682 6.87502C15.8748 6.87502 14.5077 7.15495 13.2068 7.70856C10.6524 8.79454 8.67413 10.809 7.63564 13.3821C6.59715 15.9552 6.6234 18.7783 7.70813 21.3327C8.7941 23.887 10.8086 25.8653 13.3817 26.9038C14.6326 27.4086 15.9411 27.6636 17.2707 27.6636C18.6641 27.6636 20.0313 27.3836 21.3322 26.83C22.5494 26.3127 23.6404 25.5828 24.5739 24.6606C24.5864 24.6431 24.6002 24.6281 24.6139 24.6143C24.6339 24.5943 24.6526 24.5781 24.6701 24.5656C25.6236 23.6021 26.381 22.4499 26.9021 21.1565C27.9406 18.5833 27.9143 15.7603 26.8283 13.2059C25.7436 10.6516 23.7279 8.67332 21.1548 7.63483C19.9063 7.13121 18.5979 6.87502 17.2682 6.87502Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="ele"
        >
          <div
            class="label u font secondary body-md color-neutral-cloudy"
          >
            Select what to update
          </div>
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-autocomplete-select"
              data-passed-props="[object Object]"
              data-testid="temba_select_select_what_to_update"
              data-v-4e186498=""
            >
              <div
                class="unnnic-form sm"
                data-v-48c0c241=""
                data-v-4e186498=""
              >
                <!---->
                <div
                  class="unnnic-form-input"
                  data-v-2d3b8b50=""
                  data-v-48c0c241=""
                  mask=""
                  style="position: relative;"
                  v-bind="[object Object]"
                >
                  <input
                    class="input size-sm normal has-icon-right"
                    data-v-2d3b8b50=""
                    data-v-f03c53b0=""
                    iconright="keyboard-return-1"
                    placeholder="Select existing select what to update or enter a new one"
                    size="7"
                    type="text"
                    v-bind="[object Object]"
                  />
                  <!---->
                  <span
                    class="icon-right unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-dark"
                    data-v-2d3b8b50=""
                    data-v-a1936218=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16.9999 28.0005C16.7333 28.0005 16.4813 27.8965 16.2933 27.7072L11.3159 22.7298C11.1226 22.5605 10.9999 22.2885 10.9999 22.0045C10.9999 21.9898 10.9999 21.9752 11.0013 21.9605C11.0066 21.8512 11.0279 21.7498 11.0653 21.6525C11.0693 21.6432 11.0826 21.6085 11.0866 21.5992C11.1253 21.5138 11.1759 21.4325 11.2373 21.3605C11.2546 21.3365 11.2746 21.3138 11.2933 21.2938L16.2933 16.2938C16.4826 16.1045 16.7333 16.0005 16.9999 16.0005C17.2666 16.0005 17.5186 16.1045 17.7066 16.2938C17.8959 16.4818 17.9999 16.7338 17.9999 17.0005C17.9999 17.2672 17.8959 17.5192 17.7066 17.7072L14.4106 21.0045H21.9999C24.7573 21.0045 26.9999 18.7618 26.9999 16.0045V13.0005C26.9999 12.4485 27.4479 12.0005 27.9999 12.0005C28.5519 12.0005 28.9999 12.4485 28.9999 13.0005V16.0045C28.9999 19.8645 25.8599 23.0045 21.9999 23.0045H14.4173L17.7066 26.2938C18.0959 26.6832 18.0959 27.3178 17.7066 27.7085C17.5186 27.8965 17.2666 28.0005 16.9999 28.0005Z"
                        fill="#3B414D"
                      />
                      <path
                        d="M10 35.0005C7.24267 35.0005 5 32.7578 5 30.0005V10.0005C5 7.24316 7.24267 5.00049 10 5.00049H30C32.7573 5.00049 35 7.24316 35 10.0005V30.0005C35 32.7578 32.7573 35.0005 30 35.0005H10ZM10 7.00049C8.34533 7.00049 7 8.34582 7 10.0005V30.0005C7 31.6552 8.34533 33.0005 10 33.0005H30C31.6547 33.0005 33 31.6552 33 30.0005V10.0005C33 8.34582 31.6547 7.00049 30 7.00049H10Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                </div>
                <!---->
              </div>
              <!---->
            </div>
          </div>
        </div>
        <div
          class="value"
        >
          <div
            class="ele"
          >
            <div
              class="label u font secondary body-md color-neutral-cloudy"
            >
              Channel
            </div>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select bold_placeholder"
                data-passed-props="[object Object]"
                data-testid="temba_select_channel"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal has-icon-left"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      iconleft="search-1"
                      placeholder="Twilio Channel"
                      size="0"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <span
                      class="icon-left unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cloudy"
                      data-v-2d3b8b50=""
                      data-v-a1936218=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M34.0615 35.0005C33.8116 35.0005 33.5754 34.903 33.3992 34.7256L25.2575 26.5826C24.3065 27.3961 23.2355 28.0597 22.067 28.5559C20.5312 29.2082 18.9178 29.5394 17.272 29.5394C15.7011 29.5394 14.1578 29.2382 12.6819 28.6421C9.64389 27.4161 7.26574 25.0817 5.98481 22.0662C4.70388 19.052 4.67263 15.7178 5.89858 12.6811C7.12452 9.64433 9.45894 7.26492 12.4732 5.98399C14.009 5.33041 15.6211 5.00049 17.2682 5.00049C18.8391 5.00049 20.3825 5.30291 21.8583 5.89776C24.8963 7.12371 27.2745 9.45812 28.5554 12.4736C29.8363 15.4891 29.8676 18.822 28.6416 21.8588C28.1393 23.1035 27.4469 24.2444 26.5809 25.2554L34.7251 33.4009C35.09 33.7658 35.09 34.3606 34.7251 34.7268C34.5477 34.903 34.3115 35.0005 34.0615 35.0005ZM17.2682 6.87502C15.8748 6.87502 14.5077 7.15495 13.2068 7.70856C10.6524 8.79454 8.67413 10.809 7.63564 13.3821C6.59715 15.9552 6.6234 18.7783 7.70813 21.3327C8.7941 23.887 10.8086 25.8653 13.3817 26.9038C14.6326 27.4086 15.9411 27.6636 17.2707 27.6636C18.6641 27.6636 20.0313 27.3836 21.3322 26.83C22.5494 26.3127 23.6404 25.5828 24.5739 24.6606C24.5864 24.6431 24.6002 24.6281 24.6139 24.6143C24.6339 24.5943 24.6526 24.5781 24.6701 24.5656C25.6236 23.6021 26.381 22.4499 26.9021 21.1565C27.9406 18.5833 27.9143 15.7603 26.8283 13.2059C25.7436 10.6516 23.7279 8.67332 21.1548 7.63483C19.9063 7.13121 18.5979 6.87502 17.2682 6.87502Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--terciary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--secondary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Ok 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateContactForm should render field 1`] = `
<body>
  <div>
    <div
      class="dialog dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Update contact
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <div
            class="color-neutral-cloudy"
          >
            When a contact arrives at this point in your flow...
          </div>
          <div>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select bold_placeholder"
                data-passed-props="[object Object]"
                data-testid="temba_select_type"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal has-icon-left"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      iconleft="search-1"
                      placeholder="Update the contact"
                      size="0"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <span
                      class="icon-left unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cloudy"
                      data-v-2d3b8b50=""
                      data-v-a1936218=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M34.0615 35.0005C33.8116 35.0005 33.5754 34.903 33.3992 34.7256L25.2575 26.5826C24.3065 27.3961 23.2355 28.0597 22.067 28.5559C20.5312 29.2082 18.9178 29.5394 17.272 29.5394C15.7011 29.5394 14.1578 29.2382 12.6819 28.6421C9.64389 27.4161 7.26574 25.0817 5.98481 22.0662C4.70388 19.052 4.67263 15.7178 5.89858 12.6811C7.12452 9.64433 9.45894 7.26492 12.4732 5.98399C14.009 5.33041 15.6211 5.00049 17.2682 5.00049C18.8391 5.00049 20.3825 5.30291 21.8583 5.89776C24.8963 7.12371 27.2745 9.45812 28.5554 12.4736C29.8363 15.4891 29.8676 18.822 28.6416 21.8588C28.1393 23.1035 27.4469 24.2444 26.5809 25.2554L34.7251 33.4009C35.09 33.7658 35.09 34.3606 34.7251 34.7268C34.5477 34.903 34.3115 35.0005 34.0615 35.0005ZM17.2682 6.87502C15.8748 6.87502 14.5077 7.15495 13.2068 7.70856C10.6524 8.79454 8.67413 10.809 7.63564 13.3821C6.59715 15.9552 6.6234 18.7783 7.70813 21.3327C8.7941 23.887 10.8086 25.8653 13.3817 26.9038C14.6326 27.4086 15.9411 27.6636 17.2707 27.6636C18.6641 27.6636 20.0313 27.3836 21.3322 26.83C22.5494 26.3127 23.6404 25.5828 24.5739 24.6606C24.5864 24.6431 24.6002 24.6281 24.6139 24.6143C24.6339 24.5943 24.6526 24.5781 24.6701 24.5656C25.6236 23.6021 26.381 22.4499 26.9021 21.1565C27.9406 18.5833 27.9143 15.7603 26.8283 13.2059C25.7436 10.6516 23.7279 8.67332 21.1548 7.63483C19.9063 7.13121 18.5979 6.87502 17.2682 6.87502Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="ele"
        >
          <div
            class="label u font secondary body-md color-neutral-cloudy"
          >
            Select what to update
          </div>
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-autocomplete-select"
              data-passed-props="[object Object]"
              data-testid="temba_select_select_what_to_update"
              data-v-4e186498=""
            >
              <div
                class="unnnic-form sm"
                data-v-48c0c241=""
                data-v-4e186498=""
              >
                <!---->
                <div
                  class="unnnic-form-input"
                  data-v-2d3b8b50=""
                  data-v-48c0c241=""
                  mask=""
                  style="position: relative;"
                  v-bind="[object Object]"
                >
                  <input
                    class="input size-sm normal has-icon-right"
                    data-v-2d3b8b50=""
                    data-v-f03c53b0=""
                    iconright="keyboard-return-1"
                    placeholder="Select existing select what to update or enter a new one"
                    size="3"
                    type="text"
                    v-bind="[object Object]"
                  />
                  <!---->
                  <span
                    class="icon-right unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-dark"
                    data-v-2d3b8b50=""
                    data-v-a1936218=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16.9999 28.0005C16.7333 28.0005 16.4813 27.8965 16.2933 27.7072L11.3159 22.7298C11.1226 22.5605 10.9999 22.2885 10.9999 22.0045C10.9999 21.9898 10.9999 21.9752 11.0013 21.9605C11.0066 21.8512 11.0279 21.7498 11.0653 21.6525C11.0693 21.6432 11.0826 21.6085 11.0866 21.5992C11.1253 21.5138 11.1759 21.4325 11.2373 21.3605C11.2546 21.3365 11.2746 21.3138 11.2933 21.2938L16.2933 16.2938C16.4826 16.1045 16.7333 16.0005 16.9999 16.0005C17.2666 16.0005 17.5186 16.1045 17.7066 16.2938C17.8959 16.4818 17.9999 16.7338 17.9999 17.0005C17.9999 17.2672 17.8959 17.5192 17.7066 17.7072L14.4106 21.0045H21.9999C24.7573 21.0045 26.9999 18.7618 26.9999 16.0045V13.0005C26.9999 12.4485 27.4479 12.0005 27.9999 12.0005C28.5519 12.0005 28.9999 12.4485 28.9999 13.0005V16.0045C28.9999 19.8645 25.8599 23.0045 21.9999 23.0045H14.4173L17.7066 26.2938C18.0959 26.6832 18.0959 27.3178 17.7066 27.7085C17.5186 27.8965 17.2666 28.0005 16.9999 28.0005Z"
                        fill="#3B414D"
                      />
                      <path
                        d="M10 35.0005C7.24267 35.0005 5 32.7578 5 30.0005V10.0005C5 7.24316 7.24267 5.00049 10 5.00049H30C32.7573 5.00049 35 7.24316 35 10.0005V30.0005C35 32.7578 32.7573 35.0005 30 35.0005H10ZM10 7.00049C8.34533 7.00049 7 8.34582 7 10.0005V30.0005C7 31.6552 8.34533 33.0005 10 33.0005H30C31.6547 33.0005 33 31.6552 33 30.0005V10.0005C33 8.34582 31.6547 7.00049 30 7.00049H10Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                </div>
                <!---->
              </div>
              <!---->
            </div>
          </div>
        </div>
        <div
          class="value"
        >
          <div>
            <span
              class="label"
            >
              Field Value
            </span>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select completionInput"
                data-passed-props="[object Object]"
                data-testid="Field Value"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      placeholder=""
                      size="0"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--terciary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--secondary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Ok 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateContactForm should render language 1`] = `
<body>
  <div>
    <div
      class="dialog dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Update contact
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <div
            class="color-neutral-cloudy"
          >
            When a contact arrives at this point in your flow...
          </div>
          <div>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select bold_placeholder"
                data-passed-props="[object Object]"
                data-testid="temba_select_type"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal has-icon-left"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      iconleft="search-1"
                      placeholder="Update the contact"
                      size="0"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <span
                      class="icon-left unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cloudy"
                      data-v-2d3b8b50=""
                      data-v-a1936218=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M34.0615 35.0005C33.8116 35.0005 33.5754 34.903 33.3992 34.7256L25.2575 26.5826C24.3065 27.3961 23.2355 28.0597 22.067 28.5559C20.5312 29.2082 18.9178 29.5394 17.272 29.5394C15.7011 29.5394 14.1578 29.2382 12.6819 28.6421C9.64389 27.4161 7.26574 25.0817 5.98481 22.0662C4.70388 19.052 4.67263 15.7178 5.89858 12.6811C7.12452 9.64433 9.45894 7.26492 12.4732 5.98399C14.009 5.33041 15.6211 5.00049 17.2682 5.00049C18.8391 5.00049 20.3825 5.30291 21.8583 5.89776C24.8963 7.12371 27.2745 9.45812 28.5554 12.4736C29.8363 15.4891 29.8676 18.822 28.6416 21.8588C28.1393 23.1035 27.4469 24.2444 26.5809 25.2554L34.7251 33.4009C35.09 33.7658 35.09 34.3606 34.7251 34.7268C34.5477 34.903 34.3115 35.0005 34.0615 35.0005ZM17.2682 6.87502C15.8748 6.87502 14.5077 7.15495 13.2068 7.70856C10.6524 8.79454 8.67413 10.809 7.63564 13.3821C6.59715 15.9552 6.6234 18.7783 7.70813 21.3327C8.7941 23.887 10.8086 25.8653 13.3817 26.9038C14.6326 27.4086 15.9411 27.6636 17.2707 27.6636C18.6641 27.6636 20.0313 27.3836 21.3322 26.83C22.5494 26.3127 23.6404 25.5828 24.5739 24.6606C24.5864 24.6431 24.6002 24.6281 24.6139 24.6143C24.6339 24.5943 24.6526 24.5781 24.6701 24.5656C25.6236 23.6021 26.381 22.4499 26.9021 21.1565C27.9406 18.5833 27.9143 15.7603 26.8283 13.2059C25.7436 10.6516 23.7279 8.67332 21.1548 7.63483C19.9063 7.13121 18.5979 6.87502 17.2682 6.87502Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="ele"
        >
          <div
            class="label u font secondary body-md color-neutral-cloudy"
          >
            Select what to update
          </div>
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-autocomplete-select"
              data-passed-props="[object Object]"
              data-testid="temba_select_select_what_to_update"
              data-v-4e186498=""
            >
              <div
                class="unnnic-form sm"
                data-v-48c0c241=""
                data-v-4e186498=""
              >
                <!---->
                <div
                  class="unnnic-form-input"
                  data-v-2d3b8b50=""
                  data-v-48c0c241=""
                  mask=""
                  style="position: relative;"
                  v-bind="[object Object]"
                >
                  <input
                    class="input size-sm normal has-icon-right"
                    data-v-2d3b8b50=""
                    data-v-f03c53b0=""
                    iconright="keyboard-return-1"
                    placeholder="Select existing select what to update or enter a new one"
                    size="8"
                    type="text"
                    v-bind="[object Object]"
                  />
                  <!---->
                  <span
                    class="icon-right unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-dark"
                    data-v-2d3b8b50=""
                    data-v-a1936218=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16.9999 28.0005C16.7333 28.0005 16.4813 27.8965 16.2933 27.7072L11.3159 22.7298C11.1226 22.5605 10.9999 22.2885 10.9999 22.0045C10.9999 21.9898 10.9999 21.9752 11.0013 21.9605C11.0066 21.8512 11.0279 21.7498 11.0653 21.6525C11.0693 21.6432 11.0826 21.6085 11.0866 21.5992C11.1253 21.5138 11.1759 21.4325 11.2373 21.3605C11.2546 21.3365 11.2746 21.3138 11.2933 21.2938L16.2933 16.2938C16.4826 16.1045 16.7333 16.0005 16.9999 16.0005C17.2666 16.0005 17.5186 16.1045 17.7066 16.2938C17.8959 16.4818 17.9999 16.7338 17.9999 17.0005C17.9999 17.2672 17.8959 17.5192 17.7066 17.7072L14.4106 21.0045H21.9999C24.7573 21.0045 26.9999 18.7618 26.9999 16.0045V13.0005C26.9999 12.4485 27.4479 12.0005 27.9999 12.0005C28.5519 12.0005 28.9999 12.4485 28.9999 13.0005V16.0045C28.9999 19.8645 25.8599 23.0045 21.9999 23.0045H14.4173L17.7066 26.2938C18.0959 26.6832 18.0959 27.3178 17.7066 27.7085C17.5186 27.8965 17.2666 28.0005 16.9999 28.0005Z"
                        fill="#3B414D"
                      />
                      <path
                        d="M10 35.0005C7.24267 35.0005 5 32.7578 5 30.0005V10.0005C5 7.24316 7.24267 5.00049 10 5.00049H30C32.7573 5.00049 35 7.24316 35 10.0005V30.0005C35 32.7578 32.7573 35.0005 30 35.0005H10ZM10 7.00049C8.34533 7.00049 7 8.34582 7 10.0005V30.0005C7 31.6552 8.34533 33.0005 10 33.0005H30C31.6547 33.0005 33 31.6552 33 30.0005V10.0005C33 8.34582 31.6547 7.00049 30 7.00049H10Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                </div>
                <!---->
              </div>
              <!---->
            </div>
          </div>
        </div>
        <div
          class="value"
        >
          <div
            class="ele"
          >
            <div
              class="label u font secondary body-md color-neutral-cloudy"
            >
              Language
            </div>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-select"
                data-passed-props="[object Object]"
                data-testid="temba_select_language"
              >
                <!---->
                <span
                  class="dropdown"
                  data-v-6fe2671f=""
                >
                  <div
                    data-v-2d3b8b50=""
                    data-v-6fe2671f=""
                    readonly="readonly"
                    style="position: relative;"
                  >
                    <input
                      class="input size-sm normal has-icon-right"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      iconright="arrow-button-down-1"
                      iconrightclickable="true"
                      placeholder="Select the language to use for this contact"
                      readonly="readonly"
                      size="0"
                      type="text"
                    />
                    <!---->
                    <span
                      class="icon-right unnnic-icon unnnic-icon__size--xs unnnic--clickable unnnic-icon-scheme--neutral-cloudy"
                      data-v-2d3b8b50=""
                      data-v-a1936218=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M5.31471 14.0096L19.0432 29.5967C19.1676 29.7264 19.3169 29.8296 19.4822 29.9001C19.6474 29.9707 19.8253 30.007 20.005 30.007C20.1847 30.007 20.3625 29.9707 20.5278 29.9001C20.6931 29.8296 20.8424 29.7264 20.9668 29.5967L34.689 14.0096C34.7987 13.886 34.8825 13.7415 34.9353 13.5849C34.9882 13.4282 35.009 13.2625 34.9965 13.0977C34.984 12.9328 34.9385 12.7721 34.8627 12.6252C34.7869 12.4783 34.6824 12.3481 34.5553 12.2423L32.243 10.2963C31.9852 10.0789 31.6522 9.97163 31.316 9.99759C30.9797 10.0235 30.6671 10.1807 30.4457 10.435L20.2406 22.25C20.2112 22.2841 20.1749 22.3114 20.134 22.3302C20.0931 22.3489 20.0487 22.3587 20.0037 22.3587C19.9588 22.3587 19.9143 22.3489 19.8734 22.3302C19.8326 22.3114 19.7962 22.2841 19.7669 22.25L9.558 10.4338C9.33639 10.1806 9.02374 10.0252 8.68809 10.0013C8.52167 9.9865 8.35397 10.0052 8.19489 10.0563C8.03582 10.1074 7.8886 10.1898 7.76195 10.2988L5.44845 12.2423C5.32061 12.3479 5.21534 12.4781 5.13889 12.6252C5.06245 12.7723 5.0164 12.9332 5.0035 13.0985C4.99099 13.2635 5.01212 13.4294 5.06562 13.586C5.11911 13.7426 5.20386 13.8868 5.31471 14.0096Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    __use_react_component_wrap=""
                    data-v-6fe2671f=""
                    style="all: unset;"
                  >
                    <option
                      label="Remove Value"
                      value="Remove Value"
                    >
                      Remove Value
                    </option>
                  </div>
                  <div
                    class="dropdown-data"
                    data-v-6fe2671f=""
                    style="position: fixed; top: 0px;"
                  />
                </span>
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--terciary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--secondary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Ok 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateContactForm should render name 1`] = `
<body>
  <div>
    <div
      class="dialog dialog"
    >
      <div
        class="header"
      >
        <div
          class="title_container"
        >
          <div
            class="title u font secondary title-sm black"
          >
            Update contact
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <div
            class="color-neutral-cloudy"
          >
            When a contact arrives at this point in your flow...
          </div>
          <div>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select bold_placeholder"
                data-passed-props="[object Object]"
                data-testid="temba_select_type"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal has-icon-left"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      iconleft="search-1"
                      placeholder="Update the contact"
                      size="0"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <span
                      class="icon-left unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-cloudy"
                      data-v-2d3b8b50=""
                      data-v-a1936218=""
                    >
                      <svg
                        fill="none"
                        viewBox="0 0 40 40"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          class="primary"
                          d="M34.0615 35.0005C33.8116 35.0005 33.5754 34.903 33.3992 34.7256L25.2575 26.5826C24.3065 27.3961 23.2355 28.0597 22.067 28.5559C20.5312 29.2082 18.9178 29.5394 17.272 29.5394C15.7011 29.5394 14.1578 29.2382 12.6819 28.6421C9.64389 27.4161 7.26574 25.0817 5.98481 22.0662C4.70388 19.052 4.67263 15.7178 5.89858 12.6811C7.12452 9.64433 9.45894 7.26492 12.4732 5.98399C14.009 5.33041 15.6211 5.00049 17.2682 5.00049C18.8391 5.00049 20.3825 5.30291 21.8583 5.89776C24.8963 7.12371 27.2745 9.45812 28.5554 12.4736C29.8363 15.4891 29.8676 18.822 28.6416 21.8588C28.1393 23.1035 27.4469 24.2444 26.5809 25.2554L34.7251 33.4009C35.09 33.7658 35.09 34.3606 34.7251 34.7268C34.5477 34.903 34.3115 35.0005 34.0615 35.0005ZM17.2682 6.87502C15.8748 6.87502 14.5077 7.15495 13.2068 7.70856C10.6524 8.79454 8.67413 10.809 7.63564 13.3821C6.59715 15.9552 6.6234 18.7783 7.70813 21.3327C8.7941 23.887 10.8086 25.8653 13.3817 26.9038C14.6326 27.4086 15.9411 27.6636 17.2707 27.6636C18.6641 27.6636 20.0313 27.3836 21.3322 26.83C22.5494 26.3127 23.6404 25.5828 24.5739 24.6606C24.5864 24.6431 24.6002 24.6281 24.6139 24.6143C24.6339 24.5943 24.6526 24.5781 24.6701 24.5656C25.6236 23.6021 26.381 22.4499 26.9021 21.1565C27.9406 18.5833 27.9143 15.7603 26.8283 13.2059C25.7436 10.6516 23.7279 8.67332 21.1548 7.63483C19.9063 7.13121 18.5979 6.87502 17.2682 6.87502Z"
                          fill="#3B414D"
                        />
                      </svg>
                    </span>
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
        <div
          class="ele"
        >
          <div
            class="label u font secondary body-md color-neutral-cloudy"
          >
            Select what to update
          </div>
          <div
            data-use-vue-component-wrap=""
            style="all: unset;"
          >
            <div
              class="unnnic-autocomplete-select"
              data-passed-props="[object Object]"
              data-testid="temba_select_select_what_to_update"
              data-v-4e186498=""
            >
              <div
                class="unnnic-form sm"
                data-v-48c0c241=""
                data-v-4e186498=""
              >
                <!---->
                <div
                  class="unnnic-form-input"
                  data-v-2d3b8b50=""
                  data-v-48c0c241=""
                  mask=""
                  style="position: relative;"
                  v-bind="[object Object]"
                >
                  <input
                    class="input size-sm normal has-icon-right"
                    data-v-2d3b8b50=""
                    data-v-f03c53b0=""
                    iconright="keyboard-return-1"
                    placeholder="Select existing select what to update or enter a new one"
                    size="4"
                    type="text"
                    v-bind="[object Object]"
                  />
                  <!---->
                  <span
                    class="icon-right unnnic-icon unnnic-icon__size--xs unnnic-icon-scheme--neutral-dark"
                    data-v-2d3b8b50=""
                    data-v-a1936218=""
                  >
                    <svg
                      fill="none"
                      viewBox="0 0 40 40"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16.9999 28.0005C16.7333 28.0005 16.4813 27.8965 16.2933 27.7072L11.3159 22.7298C11.1226 22.5605 10.9999 22.2885 10.9999 22.0045C10.9999 21.9898 10.9999 21.9752 11.0013 21.9605C11.0066 21.8512 11.0279 21.7498 11.0653 21.6525C11.0693 21.6432 11.0826 21.6085 11.0866 21.5992C11.1253 21.5138 11.1759 21.4325 11.2373 21.3605C11.2546 21.3365 11.2746 21.3138 11.2933 21.2938L16.2933 16.2938C16.4826 16.1045 16.7333 16.0005 16.9999 16.0005C17.2666 16.0005 17.5186 16.1045 17.7066 16.2938C17.8959 16.4818 17.9999 16.7338 17.9999 17.0005C17.9999 17.2672 17.8959 17.5192 17.7066 17.7072L14.4106 21.0045H21.9999C24.7573 21.0045 26.9999 18.7618 26.9999 16.0045V13.0005C26.9999 12.4485 27.4479 12.0005 27.9999 12.0005C28.5519 12.0005 28.9999 12.4485 28.9999 13.0005V16.0045C28.9999 19.8645 25.8599 23.0045 21.9999 23.0045H14.4173L17.7066 26.2938C18.0959 26.6832 18.0959 27.3178 17.7066 27.7085C17.5186 27.8965 17.2666 28.0005 16.9999 28.0005Z"
                        fill="#3B414D"
                      />
                      <path
                        d="M10 35.0005C7.24267 35.0005 5 32.7578 5 30.0005V10.0005C5 7.24316 7.24267 5.00049 10 5.00049H30C32.7573 5.00049 35 7.24316 35 10.0005V30.0005C35 32.7578 32.7573 35.0005 30 35.0005H10ZM10 7.00049C8.34533 7.00049 7 8.34582 7 10.0005V30.0005C7 31.6552 8.34533 33.0005 10 33.0005H30C31.6547 33.0005 33 31.6552 33 30.0005V10.0005C33 8.34582 31.6547 7.00049 30 7.00049H10Z"
                        fill="#3B414D"
                      />
                    </svg>
                  </span>
                </div>
                <!---->
              </div>
              <!---->
            </div>
          </div>
        </div>
        <div
          class="value"
        >
          <div>
            <span
              class="label"
            >
              Enter a new contact name
            </span>
            <div
              data-use-vue-component-wrap=""
              style="all: unset;"
            >
              <div
                class="unnnic-autocomplete-select completionInput"
                data-passed-props="[object Object]"
                data-testid="Enter a new contact name"
                data-v-4e186498=""
              >
                <div
                  class="unnnic-form sm"
                  data-v-48c0c241=""
                  data-v-4e186498=""
                >
                  <!---->
                  <div
                    class="unnnic-form-input"
                    data-v-2d3b8b50=""
                    data-v-48c0c241=""
                    mask=""
                    style="position: relative;"
                    v-bind="[object Object]"
                  >
                    <input
                      class="input size-sm normal"
                      data-v-2d3b8b50=""
                      data-v-f03c53b0=""
                      placeholder="Enter a new contact name"
                      size="0"
                      type="text"
                      v-bind="[object Object]"
                    />
                    <!---->
                    <!---->
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="buttons_wrapper"
          >
            <div
              class="right_buttons"
            >
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--terciary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-left: 0px; margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Cancel 
                  </span>
                  <!---->
                </button>
              </div>
              <div
                data-use-vue-component-wrap=""
              >
                <button
                  class="unnnic-button unnnic-button--size-large unnnic-button--secondary unnnic-button-scheme--"
                  data-passed-props="[object Object]"
                  data-v-00f478da=""
                  style="margin-top: 0px;"
                >
                  <!---->
                  <!---->
                  <!---->
                  <span
                    class="unnnic-button__label"
                    data-v-00f478da=""
                  >
                     Ok 
                  </span>
                  <!---->
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
